force-app/main/default/objects/UPP_Notification__c/UPP_Notification__c.object-meta.xml
<CustomObject>
   
  
    <label>UPP Notification</label>
    <nameField>
        <displayFormat>Note-{00000000}</displayFormat>
        <label>UPP Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPP Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>