force-app/main/default/objects/UPP_Notification__c/fields/Certification_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Certification_Visibility__c</fullName>
    <label>Certification Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Non-Certified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>