force-app/main/default/objects/UPP_Notification__c/fields/Click_Accepted_New_Commercial_Flow__c.field-meta.xml
<CustomField>
    <fullName>Click_Accepted_New_Commercial_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Click Accepted New Commercial Flow</label>
    <type>Checkbox</type>
</CustomField>