force-app/main/default/objects/UPP_Notification__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <label>Conversation</label>
    <type>TextArea</type>
</CustomField>