force-app/main/default/objects/UPP_Notification__c/fields/Dismissable__c.field-meta.xml
<CustomField>
    <fullName>Dismissable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dismissable</label>
    <type>Checkbox</type>
</CustomField>