force-app/main/default/objects/UPP_Notification__c/fields/Evaluate_As__c.field-meta.xml
<CustomField>
    <fullName>Evaluate_As__c</fullName>
    <inlineHelpText>How the Permission Set entries are evaluated, does the context User need to be assigned to ALL listed entries or to ANY entry.</inlineHelpText>
    <label>Evaluate As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Permission Sets</fullName>
            </value>
            <value>
                <fullName>Any Permission Set</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
                <isActive>false</isActive>
                <label>ALL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>