force-app/main/default/objects/UPP_Notification__c/fields/Force_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Force_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will refresh the ENTIRE Notification with merge data from the associated template.</inlineHelpText>
    <label>Force Refresh</label>
    <type>Checkbox</type>
</CustomField>