force-app/main/default/objects/UPP_Notification__c/fields/Is_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible__c</fullName>
    <formula>AND(Active__c, OR(ISBLANK(Start_Date__c), Start_Date__c &lt;= TODAY()), OR(ISBLANK(End_Date__c), End_Date__c &gt;= TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>