force-app/main/default/objects/UPP_Notification__c/fields/Merge_Data__c.field-meta.xml
<CustomField>
    <fullName>Merge_Data__c</fullName>
    <label>Merge Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>