force-app/main/default/objects/UPP_Notification__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missed Pickup Appointment</fullName>
            </value>
            <value>
                <fullName>Past Due Shipment</fullName>
            </value>
            <value>
                <fullName>Scheduled Ship Date Change</fullName>
            </value>
            <value>
                <fullName>Sales Incentive Credit Message</fullName>
            </value>
            <value>
                <fullName>New Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>