force-app/main/default/objects/UPP_Notification__c/fields/New_Commercial_Flow__c.field-meta.xml
<CustomField>
    <fullName>New_Commercial_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Commercial Flow</label>
    <type>Checkbox</type>
</CustomField>