force-app/main/default/objects/UPP_Notification__c/fields/Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets__c</fullName>
    <label>Permission Set(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPP_Add_manage_and_remove_users_permissions_and_services</fullName>
            </value>
            <value>
                <fullName>UPP_Manage_users_permissions_and_program_enrollment</fullName>
            </value>
            <value>
                <fullName>UPP_CMS_Home_Access</fullName>
            </value>
            <value>
                <fullName>UPP_Edit_Company_Info_and_Profile</fullName>
            </value>
            <value>
                <fullName>UPP_Manage_External_Users</fullName>
            </value>
            <value>
                <fullName>UPP_View_Rewards_Widget</fullName>
            </value>
            <value>
                <fullName>UPP_View_Warranty_Guarantee_Widget</fullName>
            </value>
            <value>
                <fullName>UPP_Admin_User</fullName>
                <isActive>false</isActive>
                <label>UPP_Admin_User</label>
            </value>
            <value>
                <fullName>UPP_Integration</fullName>
                <isActive>false</isActive>
                <label>UPP_Integration</label>
            </value>
            <value>
                <fullName>UPP_Power_User</fullName>
                <isActive>false</isActive>
                <label>UPP_Power_User</label>
            </value>
            <value>
                <fullName>UPP_Standard_User</fullName>
                <isActive>false</isActive>
                <label>UPP_Standard_User</label>
            </value>
            <value>
                <fullName>UPP_Territory_Manager</fullName>
                <isActive>false</isActive>
                <label>UPP_Territory_Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>