force-app/main/default/objects/UPP_Notification__c/fields/Related_Link__c.field-meta.xml
<CustomField>
    <fullName>Related_Link__c</fullName>
    <label>Related Link</label>
    <type>Url</type>
</CustomField>