force-app/main/default/objects/UPP_Notification__c/fields/Start_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Start_Enrollment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Start Enrollment</label>
    <type>Checkbox</type>
</CustomField>