force-app/main/default/objects/UPP_Notification__c/fields/Start_Message__c.field-meta.xml
<CustomField>
    <fullName>Start_Message__c</fullName>
    <label>Start Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>