force-app/main/default/objects/UPP_Notification__c/fields/UPP_NotificationTemplate__c.field-meta.xml
<CustomField>
    <fullName>UPP_NotificationTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UPP NotificationTemplate</label>
    <referenceTo>UPP_NotificationTemplate__c</referenceTo>
    <relationshipLabel>UPP Notifications</relationshipLabel>
    <relationshipName>UPP_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>