force-app/main/default/objects/UPP_Notification__c/recordTypes/Archived.recordType-meta.xml
<RecordType>
    <fullName>Archived</fullName>
    <active>true</active>
    <label>Archived</label>
</RecordType>