force-app/main/default/objects/UPP_Notification__c/validationRules/Message_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Message_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Message__c)</errorConditionFormula>
    <errorDisplayField>Message__c</errorDisplayField>
    <errorMessage>Message is required</errorMessage>
</ValidationRule>