force-app/main/default/objects/UPP_Notification__c/validationRules/Permission_Set_Assignment_Logic.validationRule-meta.xml
<ValidationRule>
    <fullName>Permission_Set_Assignment_Logic</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT(Evaluate_As__c)), NOT(ISBLANK(Permission_Sets__c)))</errorConditionFormula>
    <errorDisplayField>Evaluate_As__c</errorDisplayField>
    <errorMessage>Required when Permission Set entries are present</errorMessage>
</ValidationRule>