force-app/main/default/objects/UPP_Notification__c/validationRules/Theme_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Theme_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Theme__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Theme__c</errorDisplayField>
    <errorMessage>Field is Required</errorMessage>
</ValidationRule>